--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>
-            WELCOME TO 
+            REFLEX
         </title>
         <meta content="" name="description">
         <meta content="" name="author">
@@ -29,7 +29,7 @@
         <script src="js\modal\modernizr.custom.js" type="text/javascript">
         </script><!-- scripts end -->
 	    	<script language="JavaScript">  
-var titletext="HELL"  
+var titletext="Reflex1337"  
 var thetext=""  
 var started=false  
 var step=0  
@@ -58,11 +58,11 @@ function anim()
 {  
 step++  
 if (step==29) {step=1}  
-if (step==29) {document.title='REALY'}  
-if (step==28) {document.title='[ REALY ]'}  
-if (step==27) {document.title='[ Y ]'}  
+if (step==29) {document.title='REFLEX'}  
+if (step==28) {document.title='[ X ]'}  
+if (step==27) {document.title='[ E ]'}  
 if (step==26) {document.title='[ L ]'}  
-if (step==25) {document.title='[ A ]'}  
+if (step==25) {document.title='[ F ]'}  
 if (step==24) {document.title='[E ]'}
 if (step==23) {document.title='[R ]'}  
 setTimeout("anim()",500); //скорость выбега, чем больше тем медленней выбег.  
@@ -107,7 +107,7 @@ window.onload=onload=welcometext
         <div class="md-overlay"></div><!-- newsletter modal overlay end -->
         <!-- animated text start -->
         <h6>
-            <span class="animated" id="js-rotating">Distinguished Master Guardian | Legendary Eagle | Legendary Eagle Master | Supreme Master First Class</span>
+            <span class="animated" id="js-rotating">Fucking retard | Autist | Cheater | Suicidal</span>
         </h6><!-- animated text end -->
         <!-- main title start -->
         <div class="titleOT">
@@ -122,10 +122,10 @@ window.onload=onload=welcometext
         <nav id="navigation">
             <ul>
                 <li class="">
-                    <a class="nav-button" href="https://vk.com/ninthsonofhell" target="_blank">VK</a>
+                    <a class="nav-button" href="https://vk.com/fx1337cs" target="_blank">VK</a>
                 </li>
                 <li class="" data-modal="">
-                    <a class="nav-button" href="http://steamcommunity.com/id/MeowQiki" target="_blank">Steam</a>
+                    <a class="nav-button" href="http://steamcommunity.com/id/fx1337cs/" target="_blank">Steam</a>
                 </li>
             </ul>
         </nav><!-- navigation end -->
