--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ window.onload=onload=welcometext
                     <a class="nav-button" href="https://vk.com/fx1337cs" target="_blank">VK</a>
                 </li>
                 <li class="" data-modal="">
-                    <a class="nav-button" href="http://steamcommunity.com/id/fx1337cs/" target="_blank">Steam</a>
+                    <a class="nav-button" href="http://steamcommunity.com/id/fx1337cs" target="_blank">Steam</a>
                 </li>
             </ul>
         </nav><!-- navigation end -->
