--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ function anim()
 step++  
 if (step==29) {step=1}  
 if (step==29) {document.title='REFLEX'}  
-if (step==28) {document.title='[ X ]'}  
+if (step==28) {document.title='[ REFLEX ]'}  
 if (step==27) {document.title='[ E ]'}  
 if (step==26) {document.title='[ L ]'}  
 if (step==25) {document.title='[ F ]'}  
