--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		var space = "       ";
 		var speed = "100";
 		var pos = 0;
-		var msg = "#Patt";
+		var msg = "#Reflex";
 		function Scroll(){
 			document.title = msg.substring(pos, msg.length) + space + msg.substring(0,pos);
 			pos++;
@@ -86,35 +86,35 @@
 
 		<div id="scene-1" class="sven-slide" data-anim="random-reveal-lt">
 			<div class="content-container">
-				<h1 class="lt-main">#Patt</h1>
+				<h1 class="lt-main">#Reflex</h1>
 				<h1 class="lt-sub">Fucking Retarded</h1>
 			</div>
 		</div>
 
 		<div id="scene-2" class="sven-slide" data-anim="sequenital-fall-lt" data-alignment="right-bottom">
 			<div class="content-container">
-				<h1 class="lt-main" data-in-ease="Bounce.easeOut">Lokigoodful</h1>
-				<h1 class="lt-sub">С#,С++ coder</h1>
+				<h1 class="lt-main" data-in-ease="Bounce.easeOut">KVch</h1>
+				<h1 class="lt-sub">Creator PROJECT</h1>
 			</div>
 		</div>
 
 		<div id="scene-3" class="sven-slide" data-anim="rainfall-reveal-lt" data-alignment="right-bottom">
 			<div class="content-container">
-				<h1 class="lt-main">Math</h1>
-				<h1 class="lt-sub">Top YouTuber</h1>
+				<h1 class="lt-main">bloody</h1>
+				<h1 class="lt-sub">ADMIN[your mamku]</h1>
 			</div>
 		</div>
 
 		<div id="scene-4" class="sven-slide" data-anim="particles-reveal-lt" data-alignment="right-bottom">
 			<div class="content-container">
-				<h1 class="lt-main" data-in-ease="Elastic.easeOut">D3FOLT</h1>
+				<h1 class="lt-main" data-in-ease="Elastic.easeOut">Harvey</h1>
 				<h1 class="lt-sub">Top Pizdyk</h1>
 			</div>
 		</div>
 
 		<div id="scene-5" class="sven-slide" data-anim="random-alpha-reveal-lt" data-alignment="right-bottom">
 			<div class="content-container">
-				<h1 class="lt-main" data-in-pattern="sequential">Skreamex</h1>
+				<h1 class="lt-main" data-in-pattern="sequential">Roll</h1>
 				<h1 class="lt-sub">Coder METHYLATED.PRO</h1>
 			</div>
 		</div>
@@ -128,8 +128,8 @@
 
 		<div id="scene-2" class="sven-slide" data-anim="sequenital-fall-lt" data-alignment="right-bottom">
 			<div class="content-container">
-				<h1 class="lt-main" data-in-ease="Bounce.easeOut">Repachino</h1>
-				<h1 class="lt-sub">FOV 10 SMOOTH 0</h1>
+				<h1 class="lt-main" data-in-ease="Bounce.easeOut">b0nsray</h1>
+				<h1 class="lt-sub">t9nka</h1>
 			</div>
 		</div>
 
@@ -151,9 +151,8 @@
 
 	<div class="sven-footer">
 		<div class="sven-info pull-left">
-			<a href="https://vk.com/id95680642" class="btn btn-ghost" id="modal-trigger" target="_blank">VK PAGE</a>
-      <a href="http://steamcommunity.com/id/p_att/" class="btn btn-ghost" id="modal-trigger" target="_blank">STEAM PROFILE</a>
-	  <a href="https://vk.com/morphenginecsgo" class="btn btn-ghost" id="modal-trigger" target="_blank">MorphEngine</a>
+			<a href="https://vk.com/refleex1337" class="btn btn-ghost" id="modal-trigger" target="_blank">VK PAGE</a>
+      <a href="http://steamcommunity.com/id/refleex1337/" class="btn btn-ghost" id="modal-trigger" target="_blank">STEAM PROFILE</a>
 		</div>
 		<div class="sven-info pull-right">
 			<a class="hashtag" style="text-transform: lowercase" target="" href="https://lokigoodful.ru/">lokigoodful.ru © 2016-2017 Lokigoodful</a>
