--- a/index.html
+++ b/index.html
@@ -1,60 +1,5 @@
-﻿<!DOCTYPE html>
-<!--
- http://officialpatt.xyz/
- http://officialpatt.xyz/
- http://officialpatt.xyz/
- http://officialpatt.xyz/
- http://officialpatt.xyz/
 
- Моя пэйджа в вк! - vk.com/lokigoodful
-
- Copyright (c) 2017 Lokigoodful
-
- 
- Do not copy-paste asshole!
- Не копипасти мудак!
- Do not copy-paste asshole!
- Не копипасти мудак! 
- Do not copy-paste asshole!
- Не копипасти мудак! 
- Do not copy-paste asshole!
- Не копипасти мудак! 
- Do not copy-paste asshole!
- Не копипасти мудак!
- Do not copy-paste asshole!
- Не копипасти мудак!
- Do not copy-paste asshole!
- Не копипасти мудак! 
- Do not copy-paste asshole!
- Не копипасти мудак! 
- Do not copy-paste asshole!
- Не копипасти мудак! 
- Do not copy-paste asshole!
- Не копипасти мудак! 
- Do not copy-paste asshole!
- Не копипасти мудак! 
- Do not copy-paste asshole!
- Не копипасти мудак! 
- Do not copy-paste asshole!
- Не копипасти мудак! 
- Do not copy-paste asshole!
- Не копипасти мудак!
--->
-
-
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="format-detection" content="telephone=no"> 
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-
-	<link rel="shortcut icon" sizes="196x196" href="images/icons/icon-196x196.png">
-	<link rel="apple-touch-icon" href="images/icons/touch-icon-iphone.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="images/icons/touch-icon-ipad.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="../error.hostinger.eu/index.html">
-	<link rel="apple-touch-icon" sizes="152x152" href="images/icons/touch-icon-ipad-retina.png">
-	<script>
+              <script>
 		<!--
 		var space = "       ";
 		var speed = "100";
@@ -115,14 +60,14 @@
 		<div id="scene-5" class="sven-slide" data-anim="random-alpha-reveal-lt" data-alignment="right-bottom">
 			<div class="content-container">
 				<h1 class="lt-main" data-in-pattern="sequential">Roll</h1>
-				<h1 class="lt-sub">Coder METHYLATED.PRO</h1>
+				<h1 class="lt-sub">Cheater</h1>
 			</div>
 		</div>
 
 		<div id="scene-6" class="sven-slide" data-anim="flyin-reveal-lt" data-alignment="right-bottom">
 			<div class="content-container">
-				<h1 class="lt-main" data-out-ease="Elastic.easeIn">j3rry</h1>
-				<h1 class="lt-sub">Best Companion</h1>
+				<h1 class="lt-main" data-out-ease="Elastic.easeIn">COMRAD</h1>
+				<h1 class="lt-sub">HELPER<3</h1>
 			</div>
 		</div>
 
