--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <a href="http://steamcommunity.com/id/refleex1337/" class="btn btn-ghost" id="modal-trigger" target="_blank">STEAM PROFILE</a>
 		</div>
 		<div class="sven-info pull-right">
-			<a class="hashtag" style="text-transform: lowercase" target="" href="https://lokigoodful.ru/">lokigoodful.ru © 2016-2017 Lokigoodful</a>
+			<a class="hashtag" style="text-transform: lowercase" target="" href="reflex1337.github.io/">reflex1337.ru © 2016-2017 Reflex</a>
 		</div>
 	</div>
 
