--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
               <script>
 		<!--
 		var space = "       ";
-		var speed = "100";
+		var speed = "500";
 		var pos = 0;
-		var msg = "#Reflex";
+		var msg = "reflex1337";
 		function Scroll(){
 			document.title = msg.substring(pos, msg.length) + space + msg.substring(0,pos);
 			pos++;
